New changes made

--- a/src/routes/login.css
+++ b/src/routes/login.css
@@ -95,4 +95,11 @@
   .create-account {
     color: black;
     text-decoration: underline;
+    cursor : pointer;
+  }
+
+  .login-image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
