--- a/src/routes/register.css
+++ b/src/routes/register.css
@@ -95,4 +95,11 @@
   .login-account {
     color: black;
     text-decoration: underline;
+    cursor : pointer;
+  }
+
+  .register-image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
