--- a/src/routes/login.css
+++ b/src/routes/login.css
@@ -85,14 +85,17 @@
   /* Right side: Image placeholder */
   .image-section {
     flex: 1;
-    background-color: #e0e0e0;
+    background-color: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 16px;
-    color: #666;
+    color: #ffffff;
   }
   .create-account {
     color: black;
     text-decoration: underline;
+  }
+  .login-image{
+    width: 50%;
   }
